# GeneTicker

./: LICENSE  Pipfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  pyre.yml  python-package.yml
GeneTicker/: cli.py  core.py  utils.py
assets/ASM18296v3/: assembly_data_report.jsonl  data_summary.tsv  sequence_report.jsonl
assets/ASM1933694v2/: GCF_019336935.2_ASM1933693v2_CDS.fna  GCF_019336935.2_ASM1933693v2_genomic.fna  GCF_019336935.2_ASM1933693v2_genomic.gff  GCF_019336935.2_ASM1933693v2_genomic.gtf  GCF_019336935.2_ASM1933693v2_protein.faa  assembly_data_report.jsonl  data_summary.tsv  sequence_report.jsonl
tests/: test_core.py  test_utils.py
